# litellm_cc

./: .env.example  .gitignore  .tool-versions  CLAUDE.md  COST_TRACKING.md  Dockerfile  MIGRATION.md  README.md  docker-compose.yml  main.py  pyproject.toml  test_direct_api.py
docs/: design.md  model_response.md
examples/: api_usage.py  cost_calculation_demo.py
src/gateway/: __init__.py  app.py
src/gateway/adapters/: __init__.py  anthropic_adapter.py  base.py  cohere_adapter.py  google_adapter.py  litellm_forwarder.py  openai_adapter.py  provider_router.py
src/gateway/admin/: __init__.py  routes.py  schemas.py
src/gateway/api/: __init__.py  routes.py
src/gateway/auth/: __init__.py  dependencies.py  exceptions.py
src/gateway/billing/: __init__.py  billing_manager.py  cost_calculator.py
src/gateway/cache/: __init__.py  cache_manager.py  manager.py  redis_client.py
src/gateway/config/: __init__.py  pricing.json
src/gateway/database/: __init__.py  connection.py  operations.py  repositories.py
src/gateway/endpoints/: anthropic.py  litellm_responses.py  openai.py
src/gateway/management/: __init__.py  init_pricing.py
src/gateway/middleware/: __init__.py  cors.py  error_handlers.py  logging.py
src/gateway/models/: __init__.py  account.py  api_key.py  apikey.py  base.py  enums.py  model_cost.py  usage_log.py
src/gateway/providers/: anthropic.py  base.py
src/gateway/proxy/: __init__.py  litellm_client.py  router.py  streaming.py
src/gateway/utils/: config.py  cost_calculator.py  llm_config.py  logging.py  pricing_loader.py  provider_info.py
